# CPS_public

./: .gitignore  LICENSE  README
cps_pp/: COMPILE  ChangeLog  INSTALL  INSTALL.CJ  MERGE  Makefile.compile.in  Makefile.in  Makefile.rules  Makefile.rules.in  Makefile.users.in  Makefile.vars.in  Makefile_cps.in  Makefile_cps_src  Makefile_depend  README  TODO  VERSION  XLC.cfg.in  conf  conf.h.in  conf.in  config.h.in  config.sub  config_wrapper.in  configure  configure.ac  configure.in  install.sh  precision.h.in  temp.src  uname  write_debug_path.pl
cps_pp/aux/cg-dwf-1.3.3/: Makefile  Makefile.ssef  README  algorithm2e.sty  dwf-altivecf.c  dwf-altivecf.h  dwf-bluelightd.c  dwf-bluelightd.h  dwf-bluelightf.c  dwf-bluelightf.h  dwf-ssed.c  dwf-ssed.h  dwf-ssef.c  dwf-ssef.h  dwf-tables.h  dwf.c  dwf.nw  interface.nw
cps_pp/aux/qmp-2.3.1/: CONF
cps_pp/doc/: Makefile  Makefile.common  cleandocs.sh  cvsaccess.html  how_to_mirror.html  index.html  keychain.html  mkdocs.sh  todo.html
cps_pp/doc/changelog/: Makefile  changelog.html  changelog.tex
cps_pp/doc/doxygen/: Makefile  anjsCommentFilter.pl  doxygen.cfg
cps_pp/doc/examples/: doxygen.cfg  index.html
cps_pp/doc/history/: index.html
cps_pp/doc/manual/: Makefile  document.html  document.tex
cps_pp/doc/mpi-scu/: Makefile  commspec.html  commspec.tex  stridedef.eps
cps_pp/doc/new_structure/: Makefile  structure.html  structure.ps  structure.tex
cps_pp/doc/porting/: Makefile  porting.html  porting.tex
cps_pp/doc/qcdio/: Makefile  qcdio.html  qcdio.tex
cps_pp/doc/qcdsp/: 1Dring.eps  1Dring.fig  1Dring_addition.eps  1Dring_addition.fig  Makefile  README  all_to_all_bcast.eps  all_to_all_bcast.fig  ch1.tex  ch2.tex  ch3.tex  ch4.tex  ch5.tex  ch6.tex  ch7.tex  checkerboard_proc.eps  checkerboard_proc.fig  crate_photo.eps  daughterboard_photo.eps  gatherscatter.eps  gatherscatter.fig  mesh_sum.eps  mesh_sum.fig  message.eps  message.fig  motherboard_photo.eps  networks_summary.eps  one_to_all_bcast.eps  one_to_all_bcast.fig  toplevel.html  toplevel.tex  torusRing.eps  torusRing.fig
cps_pp/doc/ref/: doxygen.cfg  main.dox
cps_pp/doc/roadmap/: Makefile  roadmap.tex
cps_pp/doc/structure/: Makefile  structure.html  structure.tex
cps_pp/doc/testing/: Makefile  testing.html  testing.tex
cps_pp/doc/usr/: action.dox  algo.dox  detail.dox  doxygen.cfg  interface.dox  intro.dox  main.dox  programming.dox
cps_pp/hdw_tests/: Makefile_common.in
cps_pp/hdw_tests/asqtad_hmc/: main.C
cps_pp/hdw_tests/asqtad_hmd/: main.C
cps_pp/hdw_tests/clover_hmd/: Makefile_regression  main.C
cps_pp/include/: cps.h  qcd_api.h  version.h
cps_pp/include/alg/: FourMom.h  a2a_arg.h  alg_actiondensity.h  alg_all.h  alg_base.h  alg_dens.h  alg_eig.h  alg_eq_state.h  alg_fix_gauge.h  alg_fourier_prop.h  alg_ghb.h  alg_gparitycontract.h  alg_hmc.h  alg_hmd.h  alg_hq_pot.h  alg_inst.h  alg_int.h  alg_lanczos.h  alg_meas.h  alg_mom.h  alg_muon.h  alg_noise.h  alg_nuc3pt.h  alg_overrelax.h  alg_pbp.h  alg_plaq.h  alg_pot.h  alg_pot2.h  alg_rect.h  alg_remez.h  alg_rnd_gauge.h  alg_s_spect.h  alg_s_vacpol.h  alg_smear.h  alg_smear2.h  alg_tcharge.h  alg_threept.h  alg_w_spect.h  alg_wilsonflow.h  alg_wline.h  (+94 more)
cps_pp/include/comms/: bgl_glb.h  bgl_net.h  cbuf.h  comms_all.h  double64.h  glb.h  glb_sum_internal.h  mpi_requests.h  nga_reg.h  nga_reg.h_kno  nga_reg.h_orig  scu.h  scu_dir_arg.h  scu_enum.h  sysfunc.h  sysfunc_bgl.h  sysfunc_cps.h  sysfunc_mpi.h  sysfunc_noarch.h  sysfunc_qmp.h
cps_pp/include/input/: Makefile  Makefile.in  a2a_arg.x  ape_smear_arg.x  array_arg.x  backup  bfm_arg.x  cg_arg.x  common_arg.x  conf.h  config.h  dens_arg.x  do_arg.x  eig_arg.x  eigcg_arg.x  emspect_arg.x  enum.x  eq_state_arg.x  fix_gauge_arg.x  ghb_arg.x  gparity_contract_arg.x  hmc_arg.x  hmd_arg.x  hyp_smear_arg.x  inst_arg.x  int_arg.x  kinetic_smear_arg.x  ktopipi_jobparams.x  lanc_arg.x  lanczos_arg.x  loc_arg.x  matrixpolynomial_arg.x  mdwf_arg.x  meas_arg.x  mobius_arg.x  mom_arg.x  muon_arg.x  no_arg.x  noise_arg.x  nuc3pt_arg.x  (+11 more)
cps_pp/include/mem/: p2v.h
cps_pp/include/util/: Flconv.h  ReadLattice.h  ReadLatticePar.h  ReadNERSC.h  ReadU1LatticePar.h  WriteLattice.h  WriteLatticePar.h  WriteNERSC.h  WriteU1LatticePar.h  algebra.h  amalloc.h  asq_data_types.h  asqtad.h  asqtad_int.h  checksum.h  clover.h  command_line.h  consts.h  conversion.h  crc32-reference.h  data_shift.h  data_types.h  defines.h  dense_matrix.h  dirac_op.h  dump_xml.h  dwf.h  eig_io.h  eigen_container.h  enum.h  enum_func.h  error.h  fft.h  flavormatrix.h  fpconv.h  gauge_agg.h  gjp.h  gparity_singletodouble.h  gsum64ext.h  gw_hb.h  (+66 more)
cps_pp/misc/scripts/: co.csh  cvs2cl.pl  cvs_merge.csh  cvs_merge.csh.2  indent  makefile_add.csh  vn.csh
cps_pp/misc/vml_encode/: Makefile
cps_pp/production_code/WME_all/: eigcg.C  eigcg.h  main.C  prop_container.C  prop_container.h  qsub.command  run_2pion.C  run_2pion.h  run_bk.C  run_bk.h  run_k2pipi.C  run_kl3.C  run_mres.C  run_omega.h  run_prop.C  run_prop.h  run_wsnk.h  twisted_bc.h
cps_pp/production_code/prop_gen_eigCG/: Makefile  do_arg.vml  eigcg_arg.vml  gauss_arg.vml  main.C  main.C.v1  meas_arg.vml  qpropw_arg1.vml
cps_pp/production_code/reweighting/: do_arg.vml  quo_arg.vml  reweight.C  reweight.C.v2  reweight.C.v3
cps_pp/src/: Makefile
cps_pp/src/alg/: Makefile
cps_pp/src/comms/: Makefile
cps_pp/src/mem/: Makefile
cps_pp/src/simd/: Makefile  VtimesQ.C
cps_pp/src/util/: Makefile
cps_pp/tests/: Compare  Makefile  Makefile_common  Makefile_common.in  Makefile_common2  Makefile_common2.in  NewQrun  Qrun  combine_files.pl  combine_files_xml.pl  machine_depend.pl  regression.pl  regression.pl.in  results
cps_pp/tests/PlaqTest/: Makefile  Makefile_regression  main.C
cps_pp/tests/TestU01/: Makefile  cps.c  do_arg.vml  u_cps.C
cps_pp/tests/asqd_test/: main.C
cps_pp/tests/asqtad_hasenbusch/: ab2_arg.vml  ab3_arg.vml  do_arg.vml  evo_arg.vml  gauge_arg.vml  hmc_arg.vml  rat_arg.vml  rat_heavy.vml  rat_light.vml  rhmc.C  run.asqtad
cps_pp/tests/asqtad_hmc/: main.C
cps_pp/tests/asqtad_hmd_r/: main.C
(+2659 files in other folders)
